# sourashtra_tts

./: LICENSE.md  README.md  XTTS_EDA.ipynb  pyproject.toml
dataset/transcript/: 0_next_episode_text  1_introduction.txt  2_Darwins_Theory_of_Evolution
