[project]
name = "project-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "mutagen>=1.47.0",
    "numpy>=1.22.0",
    "pandas>=1.5.3",
    "pip>=25.0.1",
    "scikit-learn>=1.6.1",
    "torch<=2.5",
    "transformers>=4.51.2",
    "tts>=0.22.0",
]
